--- a/maze.ipynb
+++ b/maze.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1-final"
+   "version": "3.9.2-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.1 64-bit",
+   "display_name": "Python 3.9.2 64-bit",
    "metadata": {
     "interpreter": {
-     "hash": "63fd5069d213b44bf678585dea6b12cceca9941eaf7f819626cde1f2670de90d"
+     "hash": "72419494b30517ae5449d8a249222e32777c85d45b7390eaa2c611095f46cef8"
     }
    }
   }
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,8 +47,9 @@
     "\n",
     "maze = []\n",
     "sizex, sizey = inputs.popleft().split(' ')\n",
+    "sizex, sizey = int(sizex), int(sizey)\n",
     "\n",
-    "for i in range(int(sizex)):\n",
+    "for i in range(sizex):\n",
     "    maze.append(inputs.popleft())\n",
     "\n",
     "print(maze)"
@@ -58,23 +59,59 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "position = [0,0]\n",
+    "end = [sizex-1, sizey-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "101111\n"
+      "['101111', '101010', '101011', '111011']\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(maze)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not list",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-4905f3f3ebc6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmaze\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mposition\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not list"
+     ]
+    }
+   ],
+   "source": [
+    "maze[position]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while True:\n",
+    "    if "
+   ]
   }
  ]
 }
